updating features: adding and deleting sections - sidenavbar - datepicker

--- a/src/components/Resume1/Resume1.styles.scss
+++ b/src/components/Resume1/Resume1.styles.scss
@@ -26,7 +26,7 @@
 
         .profile{
             width: 100%;
-            height: 166.81px;
+            height: auto;
             background-color: #E2E1E6;
         }
         h3{
