--- a/src/components/Resume1/Resume1.styles.scss
+++ b/src/components/Resume1/Resume1.styles.scss
@@ -1,7 +1,9 @@
 .Resume1_Container{
     height: auto;
     display: grid;
-    grid-template-columns: 30% 58% ;
+    grid-template-columns: 30% 58%;
+    padding-bottom: 20px;
+    letter-spacing: -.05px    !important;
     h3{
         color: #FF7246;
         font-size: 9.16px;
@@ -20,10 +22,9 @@
     }
     .c1{
         color: white;
-        height: 100%;
         max-width: 100%;
+        height: 100%;
         background-color: hsl(15, 100%, 12%);
-
         .profile{
             width: 100%;
             height: auto;
