--- a/src/components/Resume1/Resume1.styles.scss
+++ b/src/components/Resume1/Resume1.styles.scss
@@ -24,6 +24,9 @@
         color: white;
         max-width: 100%;
         height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         background-color: hsl(15, 100%, 12%);
         .profile{
             width: 100%;
@@ -70,7 +73,7 @@
             margin: 25px 0 0 0;
         }
         .row1{
-            height: 175px;
+            min-height: 175px;
             .PersonalContainer{
                 margin-bottom: 0;
                 h2{
