updated userinput features + added crop image feature + added drag and drop

--- a/src/components/Resume1/Resume1.styles.scss
+++ b/src/components/Resume1/Resume1.styles.scss
@@ -30,8 +30,8 @@
         background-color: hsl(15, 100%, 12%);
         .profile{
             width: 100%;
-            height: auto;
             background-color: #E2E1E6;
+            max-height: 180px;
         }
         h3{
             border-bottom: 0.49px solid white;
