--- a/src/pages/UserInput/UserInput.styles.scss
+++ b/src/pages/UserInput/UserInput.styles.scss
@@ -1,4 +1,5 @@
 .UserInput_Container{
+    background-color: #F5F5F5;  
     input, .input{
         border: 1px solid #DEDEDE;
     }
@@ -13,9 +14,11 @@
           font-size: 14px;
           line-height: 250%;
           padding-left: 16px;
+        align-self: flex-start;
+
           margin: 0;
         }
-        a:first-child{
+        a:last-child{
           border-left: 4px solid #1890FF;
         }
       }
@@ -95,12 +98,71 @@
         
         }
         .row2{
-            background-color: white;
+            background: #F9FAFB;
             display: flex;
             justify-content: space-between;
             width: 760px;
             padding-right: 49px;
-            
+            .moveIcon{
+                cursor: move;
+                position: absolute;
+                margin: 18px 0 0 -25px;
+            }
+            .WorkSection_Container{
+                width: 568px;
+                margin-left: -20px;
+                padding-left: 20px;
+                margin-bottom: 10px;
+            }
+            .Experience_SubContainer{
+                display: flex;
+                width: 544px;
+                justify-content: space-between;
+                align-items: center;
+                padding: 8px 12px;
+                line-height: 24px;
+                border: 1px solid #D9D9D9;
+                border-radius: 2px;
+                background-color: white;
+                .work{
+                    font-size: 14px;
+                    font-weight: 700;
+                }
+               
+                .date{
+                    font-size: 14px;
+                    color: rgba(0, 0, 0, 0.25);
+                }
+                .date, .work{
+                    margin: 0;
+                }
+                .arrow{
+                    cursor: pointer;
+                }
+             
+            }
+            .Experience_SubContainer:hover{
+                .work{
+                    color: #1890FF;
+                }
+            }
+            .groupedImages{
+                position: absolute;
+                left: 768px;
+                display: flex;
+                flex-direction: column;
+                margin-top: 5px;
+                img{
+                    margin-bottom: 11px;
+                }
+                button{
+                    border: none;
+                    background-color: transparent;
+                    padding: 0;
+                    height: 30px;
+                    cursor: pointer;
+                }
+            }
             .add_button{
                 font-size: 14px;
                 line-height: 22px;
@@ -136,13 +198,6 @@
                    
                 }
                 .flex{
-                    a{
-                        width: 71px;
-                        height: 71px;
-                        background-color: #FAFAFA;
-                        border: 1px dashed #D9D9D9;
-                        border-radius: 2px;
-                    }
                     .flex{
                         justify-content: center;
                     }
@@ -151,10 +206,11 @@
                     display: flex;
                     width: 276px;
                     flex-direction: column;
-                  
                     select, input, .input{
                         height: 40px;
-                        padding-left: 12px;
+                        padding: 0 12px;
+                        background-color: white;
+
                     }
                     .skillLevel{
                         display: flex;
@@ -233,28 +289,48 @@
                     .img{
                         margin-left: 7px;
                     }
-                    .custom-file-input{
+                    .uploadedContainer{
+                        border: 1px solid #D7D7D7;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+
+                    }
+                    .custom-file-input, .uploadedContainer{
                         width: 71px;
                         height: 71px;
+                    }
+                    .custom-file-input{
                         border: 1px dashed #D9D9D9;
                     }
-                    .custom-file-input::-webkit-file-upload-button {
+                    .imageIcon{
+                        width: 66px;
+                        height: 66px;
+                    }
+                    .custom-file-input2::-webkit-file-upload-button {
                         visibility: hidden;
-                      }
-                      .custom-file-input::before {
+                    }
+                    .custom-file-input::before {
                         content: '';
                         display: inline-block;
-                        background: url(../../assets/images/addButton.svg) no-repeat center;
                         -webkit-user-select: none;
                         cursor: pointer;
                         font-weight: 700;
+                        background: url(../../assets/images/addButton.svg) no-repeat center;
                         font-size: 10pt;
                         width: 71px;
                         height: 71px;
-                        background-color: #FAFAFA;
                         border-radius: 2px;
-                      }
-                    
+                    }
+                    .Edit{
+                        font-weight: 500;
+                        font-size: 12px;
+                        line-height: 32px;
+                        cursor: pointer;
+                        img{
+                            margin-left: 10px;
+                        }
+                    }
                 }
             }
            
@@ -296,8 +372,8 @@
     box-sizing: border-box;
     cursor: text;
     border-radius: 2px;
-    width: 568px;
-    height: 171px;
+    background-color: white;
+    z-index: 99999;
     border: 1px solid #DEDEDE;
     overflow-y: scroll;
     margin-top: 8px;
@@ -306,7 +382,14 @@
         border: none;
     }
     .toolbar{
+        display: flex;
         border-bottom: 1px solid #DEDEDE;
+        padding: 5px 0;
+        a{
+            border: none;
+            margin-left: auto;
+            margin-right: 5px;
+        }
 
     }
 }
@@ -318,7 +401,10 @@
 .headlineButtonWrapper {
         display: inline-block;
 }
-
+a{
+    text-decoration: none;
+    align-self: center;
+}
 .headlineButton {
     background: #fbfbfb;
     color: #888;
@@ -337,29 +423,6 @@ background: #f3f3f3;
 .editors{
     border-top: 1px solid #DEDEDE;
 }
-.toolbar{
-    padding: 5px 0;
-    button{
-        background-color: transparent;
-        border: none;
-    }
-}
-.draftLeft :global(.public-DraftStyleDefault-ltr) {
-    color: blue;
-    font-weight: bold;
-    text-align: left;
-  }
-  
-  .draftRight :global(.public-DraftStyleDefault-ltr) {
-    color: green;
-    font-weight: bold;
-    text-align: right;
-  }
-  
-  .draftCenter :global(.public-DraftStyleDefault-ltr) {
-    color: red;
-    font-weight: bold;
-    text-align: center;
-  }
+
 
  
