--- a/src/components/RenderedResumes/RenderedResumes.styles.scss
+++ b/src/components/RenderedResumes/RenderedResumes.styles.scss
@@ -10,6 +10,10 @@
         justify-content: center;
         grid-gap: 80.5px 73.7px;
     }
+    img{
+        width: 432px;
+        height: 610px;
+    }
 }
 // ----------------- Media Query ------------------- //
 
