--- a/src/components/Resume1/Resume1.styles.scss
+++ b/src/components/Resume1/Resume1.styles.scss
@@ -1,10 +1,10 @@
 .Resume1_Container{
     height: auto;
     display: grid;
-    grid-template-columns: 30% 58%;
-    padding-bottom: 20px;
+    grid-template-columns: 35% 60%;
+    width: 100%;
     letter-spacing: -.05px    !important;
-    .wrap{
+        .wrap{
         flex-wrap: wrap;
     }
     h3{
@@ -27,6 +27,8 @@
         color: white;
         max-width: 100%;
         height: 100%;
+        margin-bottom: 20px;
+
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -95,7 +97,6 @@
                     line-height: 140%;
                     margin: 0;
                     margin-top: 5.6px;
-                    text-align: justify;
                 }
                 .place{
                     font-weight: 400;
