--- a/src/components/ImageCropper/ImageCropper.styles.scss
+++ b/src/components/ImageCropper/ImageCropper.styles.scss
@@ -3,11 +3,13 @@
     flex-direction: column;
     align-items: flex-start;
     width: 600px;
-    height: 500px;
+    height: 400px;
+    padding: 40px 50px 50px 50px;
+    background-color: white;
     margin: 0 auto;
     .controls{
         width: 600px;
-        margin-top: 340px;
+        margin-top: 320px;
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -45,10 +47,11 @@
         }
     }
     .cropperContainer{
-        margin: 90px auto 0 auto;
+        margin: 0px auto 0 auto;
         width: 600px;
         height: 300px;
         background-color: black;
+        margin-top: 220px;
 
     }
     .settings{
